# Booking

./: .eslintrc.json  README.md  app.json  package-lock.json  package.json
FastAPI/: Dockerfile  docker-compose.yml  pyproject.toml
FastAPI/api/: db.py  main.py  migrate_db.py
FastAPI/api/cruds/: rental_product.py
FastAPI/api/models/: __init__.py  rental_product.py
FastAPI/api/routers/: retnal_product.py
FastAPI/api/schemas/: retntal_product.py
FastAPI/tests/: conftest.py  test_main.py
ReactNative/: .eslintrc.json  .prettierrc  App.jsx  AppContext.jsx  app.json  package-lock.json  package.json
ReactNative/src/components/Common/: Autocomplete.jsx  Button.jsx  CloseButton.jsx  DatePickerInput.jsx  HalfWideButton.jsx  WideButton.jsx
ReactNative/src/components/History/: ReservationHistory.jsx  ReservationHistoryList.jsx
ReactNative/src/components/Home/: HistoryButton.jsx  LogOutButton.jsx  NextReservationCard.jsx  QRButton.jsx  ReservationButton.jsx
ReactNative/src/components/QR/: PrivateQRCode.jsx
ReactNative/src/components/Reservation/: DayForm.jsx  PlaceForm.jsx  RentCard.jsx  RentItem.jsx  RoomColumn.jsx  RoomForm.jsx  RoomSelect.jsx  RoomTimeButton.jsx  TimeLine.jsx  TimeLineGrid.jsx  TopTabNavigation.jsx
ReactNative/src/components/User/: AddressInput.jsx  EmailInput.jsx  NameInput.jsx  PhoneInput.jsx  Subscription.jsx
ReactNative/src/navigation/: AuthNavigation.jsx  MainNavigation.jsx
ReactNative/src/recoil/: selectedTimes.jsx  signInStatus.jsx  timeSlotsStatus.jsx  tmpBookedDate.jsx  tmpBookedStore.jsx  tmpDecisionRoomTime.jsx
(+23 files in other folders)
